eclat-compiler/tests/bad/typing/external.ecl
external f : bool * `a => unit ;; 
       (* ===========================
          type signature of external functions
          should not contain type unknowns
          =========================== *)

let main () = () ;;